discussion/kv_engine/172721/172721_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-50841: Generate stat definitions from json

Replaces stats.def.h with stat_definitions.json.

Macro-driven stat definitions could be a little opaque when adding or
changing stats, and would become unwieldy if stat descriptions were
added.

To support future improvements, and increase readability, re-define all
stats in json.

This is a lot more verbose, but easier to understand at a glance.

Change-Id: Iaf2f947cc2785cec26768e0896978440d5d5a4fa

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-03-23 17:00:43.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-23 17:07:51.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37560/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37560/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5863/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5804/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5804/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17918/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17918/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18242/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18242/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18949/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18949/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26326/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26326/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16147/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10: error: "generated_stats.h" file not found [clang-diagnostic-error]
#include "generated_stats.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16147/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/definitions.h:125:10:
error: "generated_stats.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16147/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44636/ : FAILURE

Link error: error LNK2019: unresolved external symbol getopt referenced in function main ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44636/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16991/ : FAILURE

Compile error at [2022-03-23T17:05:28.392Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:281:26:
error: "getParameter" is a private member of "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16991/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15078/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
